{
  "version": 4,
  "terraform_version": "0.14.5",
  "serial": 11,
  "lineage": "5a5a1e15-39dd-a299-58fb-147d56c45452",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:517684923839:vpc/vpc-bd9edbd8",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-053ed46c",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-4bc9242e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-bd9edbd8",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-4fb50f2a",
            "owner_id": "517684923839",
            "state": "available"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "twitterpy",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:sa-east-1:517684923839:loadbalancer/app/twitterpy-lb-tf/63093bab73a921b2",
            "arn_suffix": "app/twitterpy-lb-tf/63093bab73a921b2",
            "dns_name": "twitterpy-lb-tf-3728274.sa-east-1.elb.amazonaws.com",
            "enable_deletion_protection": true,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:sa-east-1:517684923839:loadbalancer/app/twitterpy-lb-tf/63093bab73a921b2",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "twitterpy-lb-tf",
            "security_groups": [
              "sg-078b9e7ca3dccf188"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-10ffd975"
              },
              {
                "subnet_id": "subnet-e02ba197"
              },
              {
                "subnet_id": "subnet-f1aa60a8"
              }
            ],
            "subnets": [
              "subnet-10ffd975",
              "subnet-e02ba197",
              "subnet-f1aa60a8"
            ],
            "tags": {
              "Environment": "production"
            },
            "vpc_id": "vpc-bd9edbd8",
            "zone_id": "Z2P70J7HTTTPLU"
          },
          "dependencies": [
            "aws_security_group.alb",
            "data.aws_subnet_ids.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:sa-east-1:517684923839:listener/app/twitterpy-lb-tf/63093bab73a921b2/3fd8a44d4e225eac",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "404: page not found",
                    "status_code": "404"
                  }
                ],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:sa-east-1:517684923839:listener/app/twitterpy-lb-tf/63093bab73a921b2/3fd8a44d4e225eac",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:sa-east-1:517684923839:loadbalancer/app/twitterpy-lb-tf/63093bab73a921b2",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.twitterpy",
            "aws_security_group.alb",
            "data.aws_subnet_ids.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "asg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:sa-east-1:517684923839:targetgroup/terraform-asg-twitterpy/4cdeac01afab0c26",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:sa-east-1:517684923839:listener-rule/app/twitterpy-lb-tf/63093bab73a921b2/3fd8a44d4e225eac/e6e4d79b031519a2",
            "condition": [
              {
                "field": "path-pattern",
                "values": [
                  "*"
                ]
              }
            ],
            "id": "arn:aws:elasticloadbalancing:sa-east-1:517684923839:listener-rule/app/twitterpy-lb-tf/63093bab73a921b2/3fd8a44d4e225eac/e6e4d79b031519a2",
            "listener_arn": "arn:aws:elasticloadbalancing:sa-east-1:517684923839:listener/app/twitterpy-lb-tf/63093bab73a921b2/3fd8a44d4e225eac",
            "priority": 100
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.twitterpy",
            "aws_lb_listener.http",
            "aws_lb_target_group.asg",
            "aws_security_group.alb",
            "data.aws_subnet_ids.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "asg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:sa-east-1:517684923839:targetgroup/terraform-asg-twitterpy/4cdeac01afab0c26",
            "arn_suffix": "targetgroup/terraform-asg-twitterpy/4cdeac01afab0c26",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:sa-east-1:517684923839:targetgroup/terraform-asg-twitterpy/4cdeac01afab0c26",
            "lambda_multi_value_headers_enabled": false,
            "name": "terraform-asg-twitterpy",
            "port": 8080,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-bd9edbd8"
          },
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:517684923839:security-group/sg-078b9e7ca3dccf188",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-078b9e7ca3dccf188",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "http_lb",
            "name_prefix": null,
            "owner_id": "517684923839",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-bd9edbd8"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:517684923839:security-group/sg-01fe8157489df2d2c",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-01fe8157489df2d2c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "http_node",
            "name_prefix": null,
            "owner_id": "517684923839",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-bd9edbd8"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:517684923839:security-group/sg-06013b72cc0db1f32",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-06013b72cc0db1f32",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ssh",
            "name_prefix": null,
            "owner_id": "517684923839",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-bd9edbd8"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    }
  ]
}